[package]
name = "akula"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2021"
description = "Ethereum client based on turbo-geth client architecture"
license = "Apache-2.0"
default-run = "akula"

[dependencies]
anyhow = "1.0.55"
arrayref = "0.3.6"
arrayvec = { version = "0.7.2", features = ["serde"] }
async-recursion = "1.0.0"
async-stream = "0.3.2"
async-trait = "0.1.52"
auto_impl = "0.5.0"
byte-unit = "4.0.13"
bytes = { version = "1.1.0", features = ["serde"] }
bytes-literal = { git = "https://github.com/vorot93/bytes-literal" }
bytesize = "1.1.0"
clap = { version = "3.1.1", features = ["derive"] }
croaring = { git = "https://github.com/vorot93/croaring-rs", branch = "staging" }
crossterm = { version = "0.23.0", optional = true }
derive_more = "0.99.17"
directories = "4.0.1"
educe = { version = "0.4.18", features = ["Debug", "Default"] }
enum-as-inner = "0.3.3"
ethash = { git = "https://github.com/rust-ethereum/ethash", branch = "ethnum" }
ethereum-forkid = "0.7.0"
ethereum-interfaces = { git = "https://github.com/ledgerwatch/interfaces", branch = "master", features = [
    "remotekv",
    "sentry",
] }
ethereum-types = { version = "0.13.1", features = ["codec"] }
ethnum = { git = "https://github.com/vorot93/ethnum-rs", branch = "staging", features = [
    "llvm-intrinsics",
    "rlp",
    "scale",
] }
futures-core = "0.3.21"
futures-util = "0.3.21"
gen-iter = "0.2.1"
getset = "0.1.2"
hash-db = "0.15.2"
hash256-std-hasher = "0.15.2"
hex = "0.4.3"
hex-literal = "0.3.4"
http = "0.2.6"
i256 = { git = "https://github.com/vorot93/rust-i256", branch = "ethnum" }
itertools = "0.10.3"
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee", features = [
    "server",
    "macros",
] }
lru = "0.7.2"
maplit = "1.0.2"
mdbx = { package = "libmdbx", version = "0.1.1" }
modular-bitfield = "0.11.2"
num-bigint = "0.4.3"
num_cpus = "1.13.1"
num-traits = "0.2.14"
once_cell = "1.9.0"
parity-scale-codec = { version = "3.0.0", features = ["bytes"] }
parking_lot = "0.12.0"
rand = "0.8.5"
rayon = "1.5.1"
ripemd = "0.1.1"
rlp = "0.5.1"
rlp-derive = "0.1.0"
ron = "0.7.0"
secp256k1 = { version = "0.21.2", features = ["global-context", "recovery"] }
serde = "1.0.136"
serde_json = "1.0.79"
serde_with = "1.12.0"
sha2 = "0.10.2"
sha3 = "0.10.1"
string = { git = "https://github.com/carllerche/string" }
strum = { version = "0.24.0", features = ["derive"] }
strum_macros = "0.24.0"
substrate-bn = "0.6.0"
tempfile = "3.3.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
toml = "0.5.8"
tonic = { version = "0.6.2", default-features = false, features = [
    "codegen",
    "prost",
    "transport",
    "tls",
] }
tracing = "0.1.31"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
triehash = "0.8.4"
walkdir = "2.3.2"
hashbrown = "0.12.0"
hashlink = "0.7.0"
fastrand = "1.7.0"

[build-dependencies]
anyhow = "1.0.55"
vergen = "6.0.2"

[dev-dependencies]
bytes-literal = { git = "https://github.com/vorot93/bytes-literal" }
proptest = "1.0.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-test = "0.4.2"
fdlimit = "0.2.1"

[patch.crates-io]
ethnum = { git = "https://github.com/vorot93/ethnum-rs", branch = "staging" }

[[bin]]
path = "bin/akula.rs"
name = "akula"

[[bin]]
path = "bin/akula-rpc.rs"
name = "akula-rpc"

[[bin]]
path = "bin/akula-toolbox.rs"
name = "akula-toolbox"

[[bin]]
path = "bin/consensus-tests.rs"
name = "consensus-tests"

[[bin]]
path = "bin/downloader.rs"
name = "downloader"

[profile.production]
inherits = "release"
codegen-units = 1
lto = true
