[package]
name = "akula"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2021"
description = "Ethereum client based on turbo-geth client architecture"
license = "Apache-2.0"
default-run = "akula"

[dependencies]
anyhow = "1.0.55"
arrayref = "0.3.6"
arrayvec = { version = "0.7.2", features = ["serde"] }
async-stream = "0.3.2"
async-trait = "0.1.52"
auto_impl = "0.5.0"
byte-unit = "4.0.13"
block-padding = "0.3"
byteorder = "1"
bytesize = "1.1.0"
cidr = "0.2"
derive_more = "0.99.17"
directories = "4.0.1"
enum-as-inner = "0.4.0"
ctr = "0.9"
data-encoding = "2"
snap = "1"
digest = "0.10"
enum-primitive-derive = "0.2"
ethereum-forkid = "0.7.0"
futures-core = "0.3.21"
futures-util = "0.3.21"
getset = "0.1.2"
hash-db = "0.15.2"
hash256-std-hasher = "0.15.2"
hex = "0.4.3"
hex-literal = "0.3.4"
http = "0.2.6"
itertools = "0.10.3"
hmac = "0.12"
lru = "0.7.2"
maplit = "1.0.2"
modular-bitfield = "0.11.2"
num-bigint = "0.4.3"
num_cpus = "1.13.1"
num-traits = "0.2.14"
once_cell = "1.9.0"
parking_lot = "0.12.0"
rand = "0.8.5"
rayon = "1.5.1"
ripemd = "0.1.1"
rlp = "0.5.1"
rlp-derive = "0.1.0"
ron = { git = "https://github.com/ron-rs/ron" }
serde = "1.0.136"
serde_json = "1.0.79"
serde_with = "1.12.0"
sha2 = "0.10.2"
sha3 = "0.10.1"
strum_macros = "0.24.0"
substrate-bn = "0.6.0"
tempfile = "3.3.0"
thiserror = "1.0.30"
tonic = { version = "0.6.2", default-features = false, features = [
    "codegen",
    "prost",
    "transport",
    "tls",
] }
tracing = "0.1.31"
triehash = "0.8.4"
walkdir = "2.3.2"
hashbrown = { version = "0.12.0", features = ["inline-more"] }
hashlink = "0.7.0"
fastrand = "1.7.0"
trust-dns-resolver = "0.20"
url = "2"
aes = "0.8"
array-init = "2"
bytes = { version = "1", features = ["serde"] }
cipher = { version = "0.4", features = ["block-padding"] }
clap = { version = "3", features = ["derive"] }
croaring = { git = "https://github.com/vorot93/croaring-rs", branch = "staging" }
crossterm = { version = "0.23", optional = true }
educe = { version = "0.4", features = ["Debug", "Default"] }
enr = { version = "0.5", default-features = false, features = [
    "rust-secp256k1",
] }
ethash = { git = "https://github.com/rust-ethereum/ethash", branch = "ethnum" }
ethereum-interfaces = { git = "https://github.com/ledgerwatch/interfaces", features = [
    "remotekv",
    "sentry",
] }
ethereum-types = { version = "0.13", features = ["codec"] }
ethnum = { git = "https://github.com/vorot93/ethnum-rs", branch = "staging", features = [
    "llvm-intrinsics",
    "rlp",
    "scale",
] }
fdlimit = "0.2"
futures-sink = "0.3"
generic-array = "0.14"
i256 = { git = "https://github.com/vorot93/rust-i256", branch = "ethnum-2" }
igd = { git = "https://github.com/stevefan1999-personal/rust-igd", features = [
    "aio",
    "tokio1",
] }
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee", features = [
    "server",
    "macros",
] }
mdbx = { package = "libmdbx", version = "0.1" }
parity-scale-codec = { version = "3", features = ["bytes"] }
primitive-types = { version = "0.11", default-features = false, features = [
    "rlp",
    "rustc-hex",
] }
secp256k1 = { version = "0.21.3", features = [
    "global-context",
    "recovery",
    "rand-std",
] }
string = { git = "https://github.com/carllerche/string" }
strum = { version = "0.23", features = ["derive"] }
task-group = { git = "https://github.com/vorot93/task-group" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = { version = "0.5", features = ["preserve_order"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4.19"

[build-dependencies]
anyhow = "1.0.55"
vergen = "6.0.2"

[dev-dependencies]
proptest = "1.0.0"
tokio = { version = "1.17.0", features = ["full"] }
rand = { version = "0.8.5", features = ["std"] }
tokio-test = "0.4.2"
fdlimit = "0.2.1"

[patch.crates-io]
enr = { git = "https://github.com/rust-ethereum/enr", branch = "vorot93/update-deps" }
ethnum = { git = "https://github.com/vorot93/ethnum-rs", branch = "staging" }
arrayvec = { git = "https://github.com/vorot93/arrayvec", branch = "pop-unchecked" }

[[bin]]
path = "bin/akula.rs"
name = "akula"

[[bin]]
path = "bin/akula-rpc.rs"
name = "akula-rpc"

[[bin]]
path = "bin/akula-sentry.rs"
name = "akula-sentry"

[[bin]]
path = "bin/akula-toolbox.rs"
name = "akula-toolbox"

[[bin]]
path = "bin/consensus-tests.rs"
name = "consensus-tests"
[[bench]]
name = "bench"
path = "./src/execution/evm/benches/bench.rs"
harness = false

[profile.production]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true
